# axelar-cross-chain-arbs

./: .env  Cargo.toml  README.md  example
src/: lib.rs  main.rs  routers.rs  structs.rs  utils.rs
src/files/: chains.json
