[package]
name = "axelar_arbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = "0.4.35"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
rayon = "1.9.0"
reqwest = "0.11.26"
ring = "0.17.8"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
ethers = { version = "2.0.14", default-features = true, features = ["ws"] }
ethers-core = "2.0.14"
rust_decimal = "1.34.3"
secp256k1 = "0.27.0"
web3 = "0.19.0"
hex = "0.4.3"
dotenv = "0.15.0"
